--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "A library for formatting country names in FT style",
   "main": "src/index.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "pika build"
   },
-  "keywords": [],
+  "keywords": [
+    "financial times",
+    "data"
+  ],
   "author": "Ændrew Rininsland <andrew.rininsland@ft.com>",
   "license": "ISC",
   "devDependencies": {
